[package]
authors = ["Christian Kauhaus <christian@kauhaus.de>"]
edition = "2018"
name = "esera-mqtt"
version = "0.5.2"

[[bin]]
name = "esera-bridge"

[[bin]]
name = "climate"

[dependencies]
anyhow = "1"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4.11"
structopt = "0.3.17"
thiserror = "1.0.21"
bitflags = "1.3"
crossbeam = "0.8.0"
enum_dispatch = "0.3.4"
nom = "6.0.0"
parking_lot = "0.11.1"
rumqttc = "0.10"
serde_json = "1.0.59"
serde = { version = "1.0.117", features = ["derive"] }
strum = "0.22"
strum_macros = "0.22"
tokio = "1.13"
toml = "0.5.8"
slog = "2.7.0"
slog-term = "2.8"
slog-async = "2.7"
slog-stdlog = "4.1.0"

[dev-dependencies]
bstr = "0.2"
assert_matches = "1.4"
pretty_assertions = "0.6"
regex = "1.5"
rexpect = "0.4"

[profile.release]
lto = "thin"
